# basic256

./: BASIC256.nsi  BASIC256.pro  BasicDock.cpp  BasicEdit.cpp  BasicGraph.cpp  BasicGraph.h  BasicMediaPlayer.cpp  BasicMediaPlayer.h  BasicOutput.cpp  CMakeLists.txt  COMPILING.txt  COMPILING_RaspberryPI.txt  CONTRIBUTORS  ChangeLog  Constants.h  Convert.cpp  Convert.h  EditSyntaxHighlighter.cpp  EditSyntaxHighlighter.h  Interpreter.cpp  Interpreter.h  LineNumberArea.cpp  LineNumberArea.h  Main.cpp  MainWindow.cpp  MainWindow.h  PreferencesWin.cpp  QT6_MIGRATION_CHECKLIST.md  README.md  ReplaceWin.h  RunController.cpp  RunController.h  Sleeper.h  Sound.cpp  Sound.h  Stack.cpp  VariableWin.cpp  VariableWin.h  Variables.cpp  Variables.h  (+3 more)
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/scripts/: build_Linux_RPi_Trixie.sh  build_Linux_x86.sh  build_WASM.sh  build_Windows.ps1  build_installer_Windows.ps1  build_macos.sh  package_Linux_RPi_AppImage.sh  package_Linux_RPi_Trixie.sh  package_Linux_x86.sh  package_Linux_x86_AppImage.sh  package_Windows.ps1  package_macos.sh  run_testsuite.ps1  run_testsuite.sh  run_testsuite_flagsoff.sh
.github/workflows/: build.yml
.svn/: wc.db
DemoWASM/: BubbleUniverse_small.kbs  examples.qrc  moving_squares.kbs  pie_chart.kbs  plot.kbs  polytest.kbs  ring_01.kbs  subroutine_squares.kbs
DemoWASM/Demo/: BubbleUniverse_variations.kbs  FieldLines.kbs  Quiverbloom.kbs  SlimeMoldSimulation_GUI.kbs
DemoWASM/FractalsChaosAttractors/: BarnsleyFern.kbs  CellularAutomaton.kbs
DemoWASM/Games/: Flood-It.kbs  PacMan.kbs
DemoWASM/Simulations/: AnimatedBall.kbs  BouncingBall.kbs  DoublePendulum.kbs
DemoWASM/Sound_Speech/: AIChatbot.kbs  SoundStatementDemo.kbs  TwinkleTwinkle.kbs
Examples/: basic256_icon.kbs  db_quote.kbs  examples.qrc  mousedoodle.kbs  solar_system.kbs  sqrt.kbs  trig.kbs  uniformRV.kbs
Examples/Demo/: BTK2_Toolkit_demo.kbs  GoldenWaves.kbs  Life_GUI.kbs  Quiverbloom.kbs
Examples/FractalsChaosAttractors/: JuliaMoerman.kbs  Mandelbrot-256.kbs  StrangeAttractors.kbs
Examples/Fun/: Dancing_Tentacles_color.kbs  Kaleido.kbs  ParticleFun.kbs  Warpfactor_Starfield.kbs
Examples/Games/: FlappyBall.kbs  MarbleGame.kbs  PacMan.kbs  SlidingPuzzle.kbs
Examples/Original_Examples/: databasefoo.kbs  rotating3dcube.kbs  sliceanimation.kbs
Examples/Original_Examples/sprites/: spriteslice.kbs  spritetest1.kbs
Examples/Original_Examples/testing/: README.txt
Examples/Simulations/: Colliding2Balls.kbs  Colliding3Balls.kbs  CollidingMultipleBalls.kbs
Examples/dice/: dice.kbs
Examples/sprites/: bounce.kbs  breakout.kbs  spritetest2.kbs
LEX/: basicParse.l  basicParse.y
Modules/: math.kbs
TestSuite/: testsuite.kbs  testsuite_array_include.kbs  testsuite_ci.kbs  testsuite_flagsoff_ci.kbs  testsuite_map_include.kbs  testsuite_types_include.kbs
Translations/: basic256_de.ts
old github workflows qmake/: BASIC256.pro  BASIC256Portable.pro  build.yml
old github workflows qmake/workflowSciptsBuild 3 archs/scripts/: build_Linux_RPi_Trixie.sh  build_Windows.ps1  package_Linux_RPi_Trixie.sh  package_Linux_x86.sh  package_Linux_x86_AppImage.sh  package_Windows.ps1
old github workflows qmake/workflowSciptsBuild 3 archs/workflows/: build.yml
resources/: resource.qrc  windows.rc
src/app/: Main.cpp  RunController.cpp  RunController.h
src/core/: BasicDownloader.cpp  BasicMediaPlayer.cpp  Constants.h  Convert.cpp  Convert.h  DataElement.cpp  DataElement.h  Error.cpp  ErrorCodes.h  GraphicsBuffer.cpp  GraphicsBuffer.h  Interpreter.cpp  Interpreter.h  MediaPath.cpp  MediaPath.h  Sound.cpp  Sound.h  Stack.h  Variables.cpp  Version.h  WasmAudioSink.cpp  WasmAudioSink.h  WasmLaunch.cpp  WasmLaunch.h  WasmSettings.cpp  WasmSettings.h
src/gui/: BasicDock.h  BasicEdit.cpp  BasicEdit.h  BasicGraph.cpp  BasicGraph.h  BasicOutput.cpp  MainWindow.cpp  MainWindow.h  PreferencesWin.cpp  PreferencesWin.h  Settings.h
wasm-deploy/: coi-serviceworker.min.js  idbfs.js  index.html
